fix: navigation alignment

--- a/revise project/contact-style.css
+++ b/revise project/contact-style.css
@@ -70,56 +70,48 @@ body{
   
 .contact-navigation{
     display: flex;
-    flex-direction: row;
-    margin: 0 100px 0 0; 
-    justify-content: start;
-    font-family: Lato;
-    font-size: 18px;
-    font-weight: 600;
-    color: #FFFAEC ;
-    
-    position: fixed;
-    height: 100px;
-    width: 100%;
-    background-color:  rgb(0, 0, 0);
-    z-index: 100;
-    padding-left: 1%;
+  flex-direction: row;
+  justify-content: end;
+  margin-right: 100px;
+  font-family: Lato;
+  font-size: 20px;
+  color: #FFFAEC ;
+  align-items: center;
+  position: fixed;
+  height: 100px;
+  width: 100%;
+  background-color:  rgb(0, 0, 0);
+  z-index: 100;
+  margin-right: 20px;
 }
   
 .company-logo-nav{
     display: flex;
-    flex-direction: row;
-    justify-content: start;
-    align-self: start;
-    height: 100%;
-    width: 20%;
-    margin-left: 90px;
+    align-items: center;
+  position: absolute;
+  left: 6%;
 }
   
 .company-logo-nav h1{
     font-size: 20px;
-    color:#FFFAEC;
-    font-weight: normal;
-    font-family: Lato; 
-    padding-top: 38px; 
-    padding-left: 1px;
-    margin: 0;
+  font-weight: normal;
+  display: inline-block;
 }
   
 .company-logo-nav img{
     width: 70px;
-    height: 67px;
-    margin: 16px 20px 2px 2px;
+    
+    margin-right: 20px;
 }
   
 .urls-contact{
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: end;
     width: 100%;
     height: 100%;
-    padding: 0 18px 0 293px;
+    
 }
   
   /* Text for Links */
@@ -128,7 +120,7 @@ body{
 }
 
 .home, .gallery, .about, .contact{
-    width: 15%;
+    width: 285.75px;
     min-width: 10%;
 }
 
