--- a/revise project/style.css
+++ b/revise project/style.css
@@ -1,13 +1,12 @@
 body{
   margin: 0;
-  padding-bottom:3000px ;
+  
 }
 
 .main{
   display: flex;
   flex-direction: row;
- 
-  height: 2300px;
+  height: 3000px;
   width: 100%;
 
 }
@@ -277,9 +276,10 @@ span{
 
 /* package */
 .package{
+  margin-top: 400px;
   display: flex;
   flex-direction: column;
-  flex: 5;
+  flex: 6;
   
 }
 
@@ -288,7 +288,7 @@ span{
   margin-top: 30px;
   align-self: center;
   position: absolute;
-  width: 850px;
+  width: 820px;
   
 }
 .package .package-header{
@@ -315,15 +315,15 @@ span{
   border-radius: 40px;
   opacity: 0;
   animation: packages linear 1s;
-  animation-timeline: view(500px);
-  animation-range: entry 0% cover 20% ;
+  animation-timeline: view();
+  animation-range: entry 30% cover 40% ;
   animation-fill-mode: both;
   }
 
   
 .package1, .package2, .package3, .package4{
   background-color: rgb(255, 255, 255);
-  border: 1px solid rgb(118, 82, 82);
+  border: 1px solid rgba(118, 82, 82, 0.471);
   width: 23%;
   min-width: 100px;
   border-radius: 30px ;
@@ -334,6 +334,32 @@ span{
 @keyframes packages{
   from{opacity: 0;}
   to {opacity: 1;}
+}
+
+
+/* footer */
+
+.footer{
+ 
+  margin-top: 400px ;
+  flex: 4;
+  background-color:  rgb(179, 39, 39);
+ 
+}
+
+.footer-wrapper{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 100%;
+  height: 100%;
+}
+.st-col, .nd-col, .rd-col{
+  flex: 1;
+  background-color: white;
+  border: 1px solid black;
+  height: 100%;
+  
 }
 
 @media only screen and (max-width: 600px) {
@@ -355,8 +381,10 @@ span{
     display:inline-block;
   }
 
+  .tagline{
+    height: 200px;
+  }
 
-   
   .tagline .tagline-text{
     display: flex;
     flex-direction: column;
@@ -364,13 +392,12 @@ span{
     align-items: center;
     background-color: rgba(255, 255, 255, 0.88);
     width: 100%;
-    height: 70%;
+    height: 100%;
   }
+
   .showcase{
     display: flex;
     flex-direction: column;
-    
-
     margin-top: 120px;
   }
 
@@ -379,6 +406,8 @@ span{
   }
 
   .company{
+    padding-top: 0;
+    padding-bottom: 0;
     display: flex;
     align-items: center;
   }
@@ -388,6 +417,7 @@ span{
   }
 
   .showcase .carousel {
+    margin-top: 0;
     margin-bottom: 130px;
     padding-bottom: 20px;
     overflow:hidden;
@@ -398,6 +428,7 @@ span{
     width: 400px;
    }
   .showcase .carousel .carousel-header{
+    height: 120px;
     font-size: 20px;
     display: flex;
     align-items: center;
@@ -425,20 +456,22 @@ span{
   }
 
   .package1, .package2, .package3, .package4{
-    background-color:rgb(140, 124, 124);
+    background-color: rgb(255, 255, 255);
+    border: 1px solid rgba(118, 82, 82, 0.241);
     height: 70%;
     width: 100%;
     margin-bottom: 3px;
     border-radius: 3px ;
-   }
+  }
 
+  .box1{
+    height: 500px;
+    width: 400px !important;
+    margin-top:100px !important;
+  }
 
-/* footer */
+  
 
-.footer{
-  flex: 3;
-  background-color:  rgb(255, 255, 255);
-}
 }
 
 
